Fix spacing between header and below
Reduced margin between header and page contents

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ ul.ingredients li {
 }
 
 .header {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     margin-left: 2px;
     padding-left: 10px;
     border-left: 4px solid #000000;
